--- a/src/precss/blocks/_timer.scss
+++ b/src/precss/blocks/_timer.scss
@@ -1,6 +1,9 @@
 .timer {
   display: flex;
   @include row-flex();
+  @include md-block() {
+    //float: right;
+  }
 
   &__counter {
     display: flex;
