--- a/src/precss/blocks/_advantages.scss
+++ b/src/precss/blocks/_advantages.scss
@@ -6,6 +6,11 @@
     justify-content: space-between;
     margin-top: 50px;
     padding: 0 67px 120px 67px;
+
+    @include md-block() {
+      padding-right: 0;
+      padding-left: 0;
+    }
   }
 
   &__item {
@@ -14,6 +19,11 @@
     text-align: center;
     font-size: 20px;
     position: relative;
+
+    @include md-block() {
+      font-size: 16px;
+      width: 196px;
+    }
 
     &::before {
       content: "";
