--- a/src/precss/blocks/_services.scss
+++ b/src/precss/blocks/_services.scss
@@ -33,3 +33,14 @@
     display: flex !important;
   }
 }
+
+@media screen and (max-width: 1350px) {
+
+  .services {
+    background: none;
+
+    &:before {
+      display: none;
+    }
+  }
+}
