--- a/src/precss/blocks/_tabs.scss
+++ b/src/precss/blocks/_tabs.scss
@@ -8,6 +8,9 @@
     width: 780px;
     margin: 0 auto;
     box-sizing: border-box;
+    @include md-block () {
+      width: 100%;
+    }
   }
 
   &__header {
@@ -22,6 +25,10 @@
     //padding: 20px;
     width: 390px;
     cursor: pointer;
+
+    @include md-block () {
+      width: 50%;
+    }
 
     span {
       display: inline-block;
