--- a/src/precss/blocks/_workers.scss
+++ b/src/precss/blocks/_workers.scss
@@ -14,8 +14,12 @@
   &__slide {
     display: flex !important;
     align-items: flex-start;
+
     img {
       @include size(5);
+      @include md-block () {
+        width: auto;
+      }
     }
   }
 
@@ -23,9 +27,15 @@
     display: flex;
     flex-direction: column;
     padding-right: 30px;
-    @include size(7)
+    @include size(7);
     margin-left: auto;
     padding-top: 60px;
+
+    @include md-block () {
+      padding-top: 0;
+      padding-right: 0;
+      margin-left: 30px;
+    }
   }
 
   &__name {
