--- a/src/precss/blocks/_page-header.scss
+++ b/src/precss/blocks/_page-header.scss
@@ -8,13 +8,13 @@
     position: static;
 
     @include sm-block() {
-      position: fixed;
+      /*position: fixed;
       min-height: 100vh;
       width: 100%;
       left: 0;
       top: 0;
       background-color: white;
-      z-index: 10;
+      z-index: 10;*/
     }
   }
 
