--- a/src/precss/blocks/_scheme.scss
+++ b/src/precss/blocks/_scheme.scss
@@ -29,10 +29,17 @@
       width: 300px;
       height: 580px;
     }
+    @include sm-block() {
+      display: none;
+    }
   }
 
   &__item {
     position: absolute;
+    @include sm-block() {
+      position: static;
+      transform: none;
+    }
 
     &::before {
       content: "";
@@ -323,6 +330,10 @@
     text-align: center;
     font-size: 16px;
     width: 225%;
+    @include sm-block() {
+      position: static;
+    }
+
 
     span {
       @include md-block() {
