--- a/src/precss/blocks/_main-menu.scss
+++ b/src/precss/blocks/_main-menu.scss
@@ -1,10 +1,77 @@
 .main-menu {
   display: flex;
   background-color: $c-bg-gray;
+  @include sm-block() {
+    padding-top: 30px;
+    position: absolute;
+    height: 110px;
+    width: 100%;
+    z-index: 11;
+  }
+
+  /*+ .header-top {
+    margin-top: 110px;
+  }
+
+  &.md-hidden + .header-top {
+    margin-top: 0;
+  }*/
 
   &__wrap {
     display: flex;
-    // width: 1170px;
+    @include sm-block() {
+      display: block;
+      position: relative;
+      padding-right: 135px;
+    }
+
+    &:after {
+      @include sm-block() {
+        content: '';
+        clear: both;
+        display: table;
+        width: 100%;
+      }
+    }
+  }
+
+  &__close-header {
+    display: none;
+    @include sm-block() {
+      background-color: $c-blue;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      margin-top: -30px;
+      height: 50px;
+      width: 50px;
+    }
+
+    &:before,
+    &:after {
+      @include sm-block() {
+        background-color: #fff;
+        content: '';
+        height: 2px;
+        width: 20px;
+        position: absolute;
+        top: 23px;
+        left: 15px;
+        transform: rotate(45deg);
+      }
+    }
+
+    &:after {
+      @include sm-block() {
+        @include sm-block() {
+          transform: rotate(-45deg);
+        }
+      }
+    }
   }
 
   &__link {
@@ -13,6 +80,13 @@
     padding: 18px;
     text-decoration: none;
     transition-duration: $trdur;
+    @include sm-block() {
+      float: left;
+      font-size: 16px;
+      padding: 0;
+      margin-right: 36px;
+      margin-bottom: 12px;
+    }
 
     &:hover {
       color: #ffffff;
@@ -20,6 +94,9 @@
 
     &:first-child {
       margin-left: -15px;
+      @include sm-block() {
+        margin-left: 0;
+      }
     }
 
     &--active {
@@ -35,6 +112,9 @@
         border-top-width: 0;
         border-left-color: transparent;
         border-right-color: transparent;
+        @include sm-block() {
+          display: none;
+        }
       }
     }
   }
