--- a/src/precss/blocks/_timer.scss
+++ b/src/precss/blocks/_timer.scss
@@ -4,6 +4,9 @@
   @include md-block() {
     //float: right;
   }
+  @include sm-block() {
+    justify-content: space-between;
+  }
 
   &__counter {
     display: flex;
