--- a/src/precss/blocks/_action.scss
+++ b/src/precss/blocks/_action.scss
@@ -8,6 +8,10 @@
   margin-top: -30px;
   margin-bottom: 80px;
   z-index: 1;
+  @include sm-block() {
+    position: relative;
+    z-index: 12;
+  }
 
   &_bottom {
     margin-bottom: -20px;
@@ -18,6 +22,9 @@
     padding: 100px 0;
     align-items: flex-start;
     justify-content: space-between;
+    @include sm-block() {
+      padding: 65px 0;
+    }
   }
 
   &__info {
@@ -34,6 +41,9 @@
     @include sm-block() {
       display: block;
       height: auto;
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom: 20px;
     }
   }
 
@@ -74,6 +84,9 @@
     @include md-block() {
       font-size: 16px;
       width: 250px;
+    }
+    @include sm-block() {
+      width: auto;
     }
   }
 }
