--- a/src/precss/blocks/_arrow.scss
+++ b/src/precss/blocks/_arrow.scss
@@ -30,6 +30,11 @@
       font-size: 16px;
     }
 
+    @include sm-block() {
+      @include size(7);
+      font-size: 14px;
+      line-height: 16px;
+    }
 
 
     &::after {
