--- a/src/precss/blocks/_feed-back.scss
+++ b/src/precss/blocks/_feed-back.scss
@@ -107,6 +107,10 @@
       flex-grow: 1;
       margin-bottom: 0;
     }
+    @include sm-block() {
+      width: 50%;
+      flex-grow: 0;
+    }
 
     &--border {
       border: 1px solid #cccccc;
