--- a/src/precss/blocks/_page-header.scss
+++ b/src/precss/blocks/_page-header.scss
@@ -1,13 +1,52 @@
-  .page-header {
+.page-header {
   padding-bottom: 190px;
   background-image: url("../img/bg-header.jpg");
   background-size: cover;
   background-position: bottom center;
+  @include sm-block() {
+    background-position: 55% 0;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 110px;
+  }
+
+  .container {
+    @include sm-block() {
+      position: relative;
+    }
+  }
+
+  &__point {
+    background-color: #057da9;
+    border-radius: 5px;
+    display: block;
+    margin-bottom: 6px;
+    height: 10px;
+    width: 10px;
+  }
+
+  &__show-header {
+    display: none;
+    @include sm-block() {
+      background-color: transparent;
+      cursor: pointer;
+      border: none;
+      display: block;
+      font-size: 60px;
+      position: absolute;
+      top: 0;
+      right: -50px;
+      height: 115px;
+      width: 50px;
+      padding: 25px 15px 25px 25px;
+    }
+  }
 
   &__wrap {
     position: static;
 
     @include sm-block() {
+      //position: relative;
       /*position: fixed;
       min-height: 100vh;
       width: 100%;
@@ -20,17 +59,46 @@
 
   &__promo {
     margin-top: 90px;
+    @include sm-block() {
+      margin-top: 50px;
+    }
   }
+
   &__btns {
     justify-content: center;
     display: flex;
     @include row-flex();
 
+    @include sm-block() {
+      display: block;
+      position: absolute;
+      top: -193px;
+      left: 155px;
+      right: 55px;
+      margin: 0;
+    }
+
     .btn {
-      @include col();
-      @include size(6);
       height: 55px;
       line-height: 25px;
+
+      @include sm-block() {
+        display: block;
+      }
+
+      &:first-child {
+        @include sm-block() {
+          margin-bottom: 5px;
+        }
+      }
+    }
+
+    @media screen and (min-width: $break_sm) {
+
+      .btn {
+        @include col();
+        @include size(6);
+      }
     }
   }
 
@@ -50,6 +118,10 @@
       font-size: 48px;
     }
 
+    @include sm-block() {
+      font-size: 36px;
+    }
+
     span {
       color: #35353d;
       font-size: 30px;
@@ -63,6 +135,10 @@
 
       @include md-block() {
         font-size: 22px;
+      }
+
+      @include sm-block() {
+        font-size: 15px;
       }
     }
   }
