--- a/src/precss/blocks/_portfolio.scss
+++ b/src/precss/blocks/_portfolio.scss
@@ -3,4 +3,7 @@
   background-image: url("../img/bg-folio.jpg");
   padding-bottom: 50px;
   padding-top: 100px;
+  @include sm-block() {
+    padding-top: 40px;
+  }
 }
