--- a/src/precss/blocks/_action.scss
+++ b/src/precss/blocks/_action.scss
@@ -11,6 +11,7 @@
   @include sm-block() {
     position: relative;
     z-index: 12;
+    margin-bottom: 40px;
   }
 
   &_bottom {
@@ -41,8 +42,8 @@
     @include sm-block() {
       display: block;
       height: auto;
-      margin-left: 0;
-      margin-right: 0;
+      margin-left: 15px;
+      margin-right: 15px;
       margin-bottom: 20px;
     }
   }
