--- a/src/precss/blocks/_feed-back.scss
+++ b/src/precss/blocks/_feed-back.scss
@@ -10,6 +10,11 @@
     justify-content: space-between;
     padding: 40px 33px;
   }
+  @include sm-block() {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 19px;
+  }
 
   &--popup {
     background: white;
@@ -108,8 +113,10 @@
       margin-bottom: 0;
     }
     @include sm-block() {
-      width: 50%;
+      width: 197px;
       flex-grow: 0;
+      margin-right: 0;
+      margin-left: 0;
     }
 
     &--border {
@@ -128,6 +135,11 @@
       width: 30%;
       padding: 14px 0;
       flex-grow: 1;
+    }
+    @include sm-block() {
+      width: 100%;
+      flex-basis: 100%;
+      margin-top: 16px;
     }
   }
 }
