--- a/src/precss/blocks/_pf-slider.scss
+++ b/src/precss/blocks/_pf-slider.scss
@@ -46,6 +46,9 @@
       width: 100%;
       padding-bottom: 0;
     }
+    @include sm-block() {
+      padding-top: 20px;
+    }
   }
   &__arrow {
     position: absolute;
