--- a/src/precss/blocks/_service.scss
+++ b/src/precss/blocks/_service.scss
@@ -7,26 +7,37 @@
 
   &__name {
     font-size: 32px;
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     color: rgb(53, 53, 61);
-    font-weight: bold;
+    font-weight: 700;
     text-transform: uppercase;
     line-height: 1;
     text-align: center;
     margin-top: 12px;
+    @include sm-block() {
+      font-size: 18px;
+    }
   }
 
   &__price {
     font-size: 18px;
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     color: rgb(53, 53, 61);
     line-height: 1;
     text-align: center;
     margin-top: 12px;
+    @include sm-block() {
+      font-size: 14px;
+    }
   }
 
   &__btn {
     margin-top: 25px;
+    @include sm-block() {
+      font-size: 12px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 
   &__round {
@@ -37,6 +48,10 @@
     position: relative;
     background-size: cover;
     background-position: center;
+    @include sm-block() {
+      height: 160px;
+      width: 160px;
+    }
 
     &--two {
       margin-left: 75px;
@@ -48,6 +63,11 @@
       height: 170px;
       bottom: 12px;
       left: -75px;
+      @include sm-block() {
+        left: -35px;
+        height: 100px;
+        width: 100px;
+      }
     }
   }
 }
