--- a/src/precss/blocks/_services.scss
+++ b/src/precss/blocks/_services.scss
@@ -3,6 +3,9 @@
   background: url('../img/bg-our-services-left.png') 64px 50% no-repeat;
   padding-bottom: 100px;
   position: relative;
+  @include sm-block() {
+    padding-bottom: 60px;
+  }
 
   &:before {
     background: url('../img/bg-our-services-right.png') 0 50% no-repeat;
@@ -25,6 +28,10 @@
     color: #35353d;
     text-align: center;
     margin-bottom: 40px;
+    @include sm-block() {
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
 
   &__wrap {
