--- a/src/precss/blocks/_tabs.scss
+++ b/src/precss/blocks/_tabs.scss
@@ -1,4 +1,5 @@
 .tabs {
+
   &__headers {
     display: flex;
     justify-content: center;
@@ -15,12 +16,12 @@
 
   &__header {
     font-size: 16px;
-    font-family: "Open Sans";
+    font-family: 'Open Sans';
     color: rgb(5, 125, 169);
-    font-weight: bold;
+    font-weight: 700;
     text-transform: uppercase;
-    height: 53px;
-    line-height: 53px;
+    height: 49px;
+    line-height: 49px;
     text-align: center;
     //padding: 20px;
     width: 390px;
@@ -28,6 +29,9 @@
 
     @include md-block () {
       width: 50%;
+    }
+    @include sm-block () {
+      font-size: 12px;
     }
 
     span {
@@ -40,20 +44,30 @@
     &:hover {
       color: #000;
       text-decoration: none;
+
       span {
         border-color: transparent;
       }
     }
 
+    &:focus {
+      outline: none;
+    }
+
     &--active {
-      // background-color: #00a4e6;
-      // border-radius: 3px 0 0 3px;
-      // color: white;
+      background-color: #00a4e6;
+      color: #fff;
+      text-decoration: none;
+      cursor: default;
+
+      &:hover {
+        color: #fff;
+      }
     }
   }
   &__header.slick-current {
     background-color: #00a4e6;
-    color: white;
+    color: #fff;
     text-decoration: none;
     cursor: default;
   }
