--- a/src/precss/blocks/_workers.scss
+++ b/src/precss/blocks/_workers.scss
@@ -4,6 +4,10 @@
   background-position: center;
   padding-top: 92px;
   padding-bottom: 62px;
+  @include sm-block() {
+    padding-top: 52px;
+    padding-bottom: 40px;
+  }
 
   &__slider {
     border: 10px solid white;
@@ -14,11 +18,21 @@
   &__slide {
     display: flex !important;
     align-items: flex-start;
+  }
 
-    img {
-      @include size(5);
-      @include md-block () {
-        width: auto;
+  &__image {
+    @include size(5);
+    @include md-block () {
+      width: auto;
+    }
+    @include sm-block() {
+      width: 208px;
+    }
+
+    .btn {
+      display: none;
+      @include sm-block() {
+        display: block;
       }
     }
   }
@@ -36,11 +50,24 @@
       padding-right: 0;
       margin-left: 30px;
     }
+    @include sm-block () {
+      font-size: 14px;
+      margin-left: 15px;
+    }
+
+    .btn {
+      @include sm-block() {
+        display: none;
+      }
+    }
   }
 
   &__name {
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 700;
+    @include sm-block() {
+      font-size: 16px;
+    }
   }
 
   &__surname {
@@ -61,6 +88,11 @@
     padding-left: 60px;
     padding-right: 60px;
     letter-spacing: 1px;
+    @include sm-block() {
+      font-size: 12px;
+      padding-left: 34px;
+      padding-right: 34px;
+    }
   }
 
   &__slider-controls {
