--- a/src/precss/blocks/_slogan.scss
+++ b/src/precss/blocks/_slogan.scss
@@ -3,6 +3,10 @@
   background-image: url("../img/bg-promo.jpg");
   background-position: center bottom;
   padding-top: 110px;
+  @include sm-block() {
+    background-position-x: -475px;
+    padding-top: 50px;
+  }
 
   &__text {
     font-weight: 900;
@@ -17,6 +21,9 @@
     @include md-block() {
       font-size: 54px;
     }
+    @include sm-block() {
+      font-size: 30px;
+    }
 
     span {
       display: block;
@@ -27,6 +34,9 @@
       }
       @include md-block() {
         font-size: 40px;
+      }
+      @include sm-block() {
+        font-size: 24px;
       }
     }
   }
