--- a/src/precss/blocks/_scheme.scss
+++ b/src/precss/blocks/_scheme.scss
@@ -14,9 +14,13 @@
     margin-top: 30px;
     margin-bottom: 0;
   }
+  @include sm-block() {
+    height: auto;
+    overflow: hidden;
+  }
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     top: 50%;
     left: 50%;
@@ -30,25 +34,42 @@
       height: 580px;
     }
     @include sm-block() {
-      display: none;
+      border-top: none;
+      border-right: none;
+      border-bottom: none;
+      border-radius: 0;
+      height: 100%;
+      width: 100%;
+      transform: none;
+      top: 0;
+      left: 65px;
     }
   }
 
   &__item {
     position: absolute;
     @include sm-block() {
-      position: static;
+      position: relative;
+      top: auto;
+      left: auto;
+      right: auto;
+      bottom: auto;
       transform: none;
+      width: 130px;
+      margin-bottom: 20px;
     }
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       height: 16px;
       width: 17px;
       border-left: 2px solid #15a4d9;
       border-top: 2px solid #15a4d9;
       z-index: 2;
+      left: 50% !important;
+      top: -10px !important;
+      transform: rotate(225deg) skew(5deg) translateX(65%) !important;
     }
 
     &--you {
@@ -60,6 +81,9 @@
         left: 50%;
         transform: translateX(-50%);
         top: 7px;
+      }
+      @include sm-block() {
+        display: none;
       }
 
       &::before {
@@ -128,6 +152,9 @@
           left: 29px;
           transform: rotate(197deg) skew(5deg);
         }
+        @include sm-block() {
+          display: none;
+        }
       }
     }
 
@@ -195,6 +222,10 @@
       @include md-block() {
         bottom: 483px;
         left: 212px;
+      }
+
+      @include sm-block() {
+        margin-bottom: 0;
       }
 
 
@@ -331,7 +362,21 @@
     font-size: 16px;
     width: 225%;
     @include sm-block() {
-      position: static;
+      position: absolute;
+      left: 100%;
+      right: auto;
+      top: 50%;
+      bottom: auto;
+      padding-left: 35px;
+      width: 272px;
+      text-align: left;
+      transform: translateY(-50%);
+    }
+
+    br {
+      @include sm-block() {
+        display: none;
+      }
     }
 
 
