--- a/src/precss/blocks/_header-top.scss
+++ b/src/precss/blocks/_header-top.scss
@@ -30,14 +30,23 @@
       margin-right: 0;
       width: 130px;
     }
+    @include xs-block() {
+      width: 93px;
+    }
   }
   &__company {
     &-name {
       font-size: 18px;
+      @include xs-block() {
+        font-size: 13px;
+      }
     }
     &-slogan {
       font-size: 11px;
       line-height: 1;
+      @include xs-block() {
+        font-size: 8px;
+      }
     }
   }
 
