--- a/src/precss/styles.scss
+++ b/src/precss/styles.scss
@@ -13,6 +13,7 @@
 @import "blocks/service";
 @import "blocks/pf-slide";
 @import "blocks/page-footer";
+@import "blocks/main-content";
 @import "blocks/main-menu";
 @import "blocks/search";
 @import "blocks/arrow";
