--- a/src/precss/blocks/_arrow.scss
+++ b/src/precss/blocks/_arrow.scss
@@ -1,6 +1,6 @@
 .arrow {
   background-color: #00a4e6;
-  color: white;
+  color: #fff;
   font-size: 20px;
   line-height: 30px;
   padding: 12px;
@@ -8,7 +8,7 @@
   height: 84px;
 
   &::after {
-    content: "";
+    content: '';
     height: 100%;
     position: absolute;
     border-color: transparent;
@@ -34,6 +34,11 @@
       @include size(7);
       font-size: 14px;
       line-height: 16px;
+    }
+    @include xs-block() {
+      font-size: 13px;
+      line-height: 21px;
+      @include size(12);
     }
 
 
@@ -64,6 +69,13 @@
       font-size: 12px;
       width: 200px;
     }
+    @include xs-block() {
+      font-size: 12px;
+      height: 80px;
+      line-height: 16px;
+      padding: 10px 5px;
+      width: 103px;
+    }
 
     span {
       font-size: 40px;
@@ -73,12 +85,19 @@
       @include sm-block() {
         font-size: 30px;
       }
+      @include xs-block() {
+        font-size: 18px;
+        margin-top: 10px;
+      }
 
       span {
         font-size: 32px;
         display: inline;
         @include sm-block() {
           font-size: 24px;
+        }
+        @include xs-block() {
+          font-size: 16px;
         }
       }
     }
@@ -92,6 +111,11 @@
       top: 0;
       left: -30px;
       // background-color: red;
+      @include xs-block() {
+        border-width: 40px;
+        border-right-width: 30px;
+        border-left-width: 0;
+      }
     }
   }
 }
