--- a/src/precss/blocks/_pf-slider.scss
+++ b/src/precss/blocks/_pf-slider.scss
@@ -5,12 +5,15 @@
   &__item {
     display: flex !important;
     position: relative;
-    background: white;
+    background: #fff;
     padding: 10px;
     margin: 0 20px;
 
     @include md-block() {
       flex-direction: column;
+    }
+    @include xs-block() {
+      margin: 0 10px;
     }
   }
 
@@ -25,6 +28,10 @@
       width: 100%;
       height: 470px;
     }
+    @include xs-block() {
+      height: auto;
+      width: 100%;
+    }
 
     img {
       flex-grow: 1;
@@ -32,6 +39,7 @@
       min-width: 100%;
     }
   }
+
   &__descr {
     width: 360px;
     margin-left: auto;
@@ -50,18 +58,25 @@
       padding-top: 20px;
     }
   }
+
   &__arrow {
     position: absolute;
     @include md-block() {
       top: 370px;
       bottom: 0;
     }
+    @include xs-block() {
+      top: 90px;
+    }
   }
 
   &__name {
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 700;
     margin-bottom: 25px;
+    @include xs-block() {
+      font-size: 16px;
+    }
   }
 
   &__text {
@@ -69,6 +84,9 @@
     line-height: 1.5;
     @include lg-block() {
       font-size: 14px;
+    }
+    @include xs-block() {
+      font-size: 13px;
     }
   }
 
