--- a/src/precss/blocks/_portfolio.scss
+++ b/src/precss/blocks/_portfolio.scss
@@ -1,9 +1,12 @@
 .portfolio {
   background-size: cover;
-  background-image: url("../img/bg-folio.jpg");
+  background-image: url('../img/bg-folio.jpg');
   padding-bottom: 50px;
   padding-top: 100px;
   @include sm-block() {
     padding-top: 40px;
+  }
+  @include xs-block() {
+    padding-bottom: 40px;
   }
 }
