--- a/src/precss/blocks/_scheme.scss
+++ b/src/precss/blocks/_scheme.scss
@@ -74,9 +74,11 @@
       border-left: 2px solid #15a4d9;
       border-top: 2px solid #15a4d9;
       z-index: 2;
-      left: 50% !important;
-      top: -10px !important;
-      transform: rotate(225deg) skew(5deg) translateX(65%) !important;
+      @include sm-block() {
+        left: 50% !important;
+        top: -10px !important;
+        transform: rotate(225deg) skew(5deg) translateX(65%) !important;
+      }
       @include xs-block() {
         left: 42% !important;
       }
@@ -304,13 +306,14 @@
   }
 
   &__icon {
-    width: 110px;
+    width: 130px;
     height: 130px;
     border-radius: 50%;
     border: 10px solid #fff;
     @include xs-block() {
       border-left: none;
       border-right: none;
+      width: 110px;
     }
 
     &--you {
