--- a/src/precss/blocks/_overlay.scss
+++ b/src/precss/blocks/_overlay.scss
@@ -5,10 +5,10 @@
   right: 0;
   bottom: 0;
   background-color: rgba(53, 53, 61, .9);
-  z-index: 3;
+  z-index: 30;
   opacity: 0;
   pointer-events: none;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 
   &--show {
     opacity: 1;
